# imu_allan_variance

./: Cargo.toml  README.md  config.yaml  license.txt
scripts/: analysis.py
src/: avar_calc.rs  calc.rs  config.rs  main.rs  messages.rs
